src/main/gen/ch/qligier/jetbrains/plugin/fhir/fsh/parser/FshParser.java
// This is a generated file. Not intended for manual editing.
package ch.qligier.jetbrains.plugin.fhir.fsh.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ch.qligier.jetbrains.plugin.fhir.fsh.parser.psi.FshTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FshParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return fshFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ALIAS, CODE_SYSTEM, EXTENSION, INSTANCE,
      INVARIANT, LOGICAL, MAPPING, PROFILE,
      RESOURCE, RULE_SET, VALUE_SET),
    create_token_set_(DESCRIPTION, EXPRESSION, ID, INSTANCE_OF,
      PARENT, SEVERITY, SOURCE, TARGET,
      TITLE, USAGE, XPATH),
    create_token_set_(ADD_CR_ELEMENT_RULE, ADD_ELEMENT_RULE, CARD_RULE, CARET_VALUE_RULE,
      CODE_CARET_VALUE_RULE, CODE_INSERT_RULE, CONCEPT, CONTAINS_RULE,
      FIXED_VALUE_RULE, FLAG_RULE, INSERT_RULE, MAPPING_RULE,
      OBEYS_RULE, ONLY_RULE, PATH_RULE, VALUE_SET_RULE,
      VS_COMPONENT),
  };

  /* ********************************************************** */
  // ruleStart path cardinality KwFlag* KwContentReference Url String (String | MultilineString)?
  public static boolean addCRElementRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addCRElementRule")) return false;
    if (!nextTokenIs(b, "<add cr element rule>", STAR, WHITESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_CR_ELEMENT_RULE, "<add cr element rule>");
    r = ruleStart(b, l + 1);
    r = r && path(b, l + 1);
    r = r && cardinality(b, l + 1);
    r = r && addCRElementRule_3(b, l + 1);
    r = r && consumeTokens(b, 0, KWCONTENTREFERENCE, URL, STRING);
    r = r && addCRElementRule_7(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KwFlag*
  private static boolean addCRElementRule_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addCRElementRule_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, KWFLAG)) break;
      if (!empty_element_parsed_guard_(b, "addCRElementRule_3", c)) break;
    }
    return true;
  }

  // (String | MultilineString)?
  private static boolean addCRElementRule_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addCRElementRule_7")) return false;
    addCRElementRule_7_0(b, l + 1);
    return true;
  }

  // String | MultilineString
  private static boolean addCRElementRule_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addCRElementRule_7_0")) return false;
    boolean r;
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, MULTILINESTRING);
    return r;
  }

  /* ********************************************************** */
  // ruleStart path cardinality KwFlag* targetType (KwOr targetType)* String (String | MultilineString)?
  public static boolean addElementRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addElementRule")) return false;
    if (!nextTokenIs(b, "<add element rule>", STAR, WHITESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_ELEMENT_RULE, "<add element rule>");
    r = ruleStart(b, l + 1);
    r = r && path(b, l + 1);
    r = r && cardinality(b, l + 1);
    r = r && addElementRule_3(b, l + 1);
    r = r && targetType(b, l + 1);
    r = r && addElementRule_5(b, l + 1);
    r = r && consumeToken(b, STRING);
    r = r && addElementRule_7(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KwFlag*
  private static boolean addElementRule_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addElementRule_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, KWFLAG)) break;
      if (!empty_element_parsed_guard_(b, "addElementRule_3", c)) break;
    }
    return true;
  }

  // (KwOr targetType)*
  private static boolean addElementRule_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addElementRule_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!addElementRule_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "addElementRule_5", c)) break;
    }
    return true;
  }

  // KwOr targetType
  private static boolean addElementRule_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addElementRule_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KWOR);
    r = r && targetType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (String | MultilineString)?
  private static boolean addElementRule_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addElementRule_7")) return false;
    addElementRule_7_0(b, l + 1);
    return true;
  }

  // String | MultilineString
  private static boolean addElementRule_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addElementRule_7_0")) return false;
    boolean r;
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, MULTILINESTRING);
    return r;
  }

  /* ********************************************************** */
  // KwAlias Colon Identifier Equal aliasValue
  public static boolean alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias")) return false;
    if (!nextTokenIs(b, KWALIAS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KWALIAS, COLON, IDENTIFIER, EQUAL);
    r = r && aliasValue(b, l + 1);
    exit_section_(b, m, ALIAS, r);
    return r;
  }

  /* ********************************************************** */
  // Urn | Url
  public static boolean aliasValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasValue")) return false;
    if (!nextTokenIs(b, "<alias value>", URL, URN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_VALUE, "<alias value>");
    r = consumeToken(b, URN);
    if (!r) r = consumeToken(b, URL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // KwAlias | KwProfile | KwExtension | KwInstance | KwInvariant | KwValueSet | KwCodeSystem
  //                               | KwRuleSet | KwMapping | KwLogical | KwResource
  static boolean allItemKws_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allItemKws_")) return false;
    boolean r;
    r = consumeToken(b, KWALIAS);
    if (!r) r = consumeToken(b, KWPROFILE);
    if (!r) r = consumeToken(b, KWEXTENSION);
    if (!r) r = consumeToken(b, KWINSTANCE);
    if (!r) r = consumeToken(b, KWINVARIANT);
    if (!r) r = consumeToken(b, KWVALUESET);
    if (!r) r = consumeToken(b, KWCODESYSTEM);
    if (!r) r = consumeToken(b, KWRULESET);
    if (!r) r = consumeToken(b, KWMAPPING);
    if (!r) r = consumeToken(b, KWLOGICAL);
    if (!r) r = consumeToken(b, KWRESOURCE);
    return r;
  }

  /* ********************************************************** */
  // KwParent | KwId | KwTitle | KwDescription | KwExpression | KwXPath | KwSeverity
  //                               | KwInstanceOf | KwUsage | KwSource | KwTarget
  static boolean allMetadataKws_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allMetadataKws_")) return false;
    boolean r;
    r = consumeToken(b, KWPARENT);
    if (!r) r = consumeToken(b, KWID);
    if (!r) r = consumeToken(b, KWTITLE);
    if (!r) r = consumeToken(b, KWDESCRIPTION);
    if (!r) r = consumeToken(b, KWEXPRESSION);
    if (!r) r = consumeToken(b, KWXPATH);
    if (!r) r = consumeToken(b, KWSEVERITY);
    if (!r) r = consumeToken(b, KWINSTANCEOF);
    if (!r) r = consumeToken(b, KWUSAGE);
    if (!r) r = consumeToken(b, KWSOURCE);
    if (!r) r = consumeToken(b, KWTARGET);
    return r;
  }

  /* ********************************************************** */
  // KwFrom | KwContains | KwNamed | KwAnd | KwOr | KwOnly | KwObeys | KwInclude | KwExclude
  //                               | KwCodes | KwWhere | KwValueSetRef | KwSystem | KwExactly | KwInsert | KwContentReference
  //                               | KwReference | KwCanonical | KwBoolean | KwFlag | KwBindingStrength | KwCodeOperator
  static boolean allOtherKws_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allOtherKws_")) return false;
    boolean r;
    r = consumeToken(b, KWFROM);
    if (!r) r = consumeToken(b, KWCONTAINS);
    if (!r) r = consumeToken(b, KWNAMED);
    if (!r) r = consumeToken(b, KWAND);
    if (!r) r = consumeToken(b, KWOR);
    if (!r) r = consumeToken(b, KWONLY);
    if (!r) r = consumeToken(b, KWOBEYS);
    if (!r) r = consumeToken(b, KWINCLUDE);
    if (!r) r = consumeToken(b, KWEXCLUDE);
    if (!r) r = consumeToken(b, KWCODES);
    if (!r) r = consumeToken(b, KWWHERE);
    if (!r) r = consumeToken(b, KWVALUESETREF);
    if (!r) r = consumeToken(b, KWSYSTEM);
    if (!r) r = consumeToken(b, KWEXACTLY);
    if (!r) r = consumeToken(b, KWINSERT);
    if (!r) r = consumeToken(b, KWCONTENTREFERENCE);
    if (!r) r = consumeToken(b, KWREFERENCE);
    if (!r) r = consumeToken(b, KWCANONICAL);
    if (!r) r = consumeToken(b, KWBOOLEAN);
    if (!r) r = consumeToken(b, KWFLAG);
    if (!r) r = consumeToken(b, KWBINDINGSTRENGTH);
    if (!r) r = consumeToken(b, KWCODEOPERATOR);
    return r;
  }

  /* ********************************************************** */
  // !<<eof>> item_
  static boolean any_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = any__0(b, l + 1);
    p = r; // pin = 1
    r = r && item_(b, l + 1);
    exit_section_(b, l, m, r, p, FshParser::recover);
    return r || p;
  }

  // !<<eof>>
  private static boolean any__0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any__0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LeftBracket (Identifier | Url | integer | Equal | Plus) RightBracket
  public static boolean bracketSuffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketSuffix")) return false;
    if (!nextTokenIs(b, LEFTBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTBRACKET);
    r = r && bracketSuffix_1(b, l + 1);
    r = r && consumeToken(b, RIGHTBRACKET);
    exit_section_(b, m, BRACKET_SUFFIX, r);
    return r;
  }

  // Identifier | Url | integer | Equal | Plus
  private static boolean bracketSuffix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketSuffix_1")) return false;
    boolean r;
    r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, URL);
    if (!r) r = integer(b, l + 1);
    if (!r) r = consumeToken(b, EQUAL);
    if (!r) r = consumeToken(b, PLUS);
    return r;
  }

  /* ********************************************************** */
  // KwCanonical LeftParen itemIdentifier (Pipe itemIdentifier)? (KwOr itemIdentifier (Pipe itemIdentifier)?)* RightParen
  public static boolean canonical(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical")) return false;
    if (!nextTokenIs(b, KWCANONICAL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KWCANONICAL, LEFTPAREN);
    r = r && itemIdentifier(b, l + 1);
    r = r && canonical_3(b, l + 1);
    r = r && canonical_4(b, l + 1);
    r = r && consumeToken(b, RIGHTPAREN);
    exit_section_(b, m, CANONICAL, r);
    return r;
  }

  // (Pipe itemIdentifier)?
  private static boolean canonical_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical_3")) return false;
    canonical_3_0(b, l + 1);
    return true;
  }

  // Pipe itemIdentifier
  private static boolean canonical_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && itemIdentifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (KwOr itemIdentifier (Pipe itemIdentifier)?)*
  private static boolean canonical_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!canonical_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "canonical_4", c)) break;
    }
    return true;
  }

  // KwOr itemIdentifier (Pipe itemIdentifier)?
  private static boolean canonical_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KWOR);
    r = r && itemIdentifier(b, l + 1);
    r = r && canonical_4_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (Pipe itemIdentifier)?
  private static boolean canonical_4_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical_4_0_2")) return false;
    canonical_4_0_2_0(b, l + 1);
    return true;
  }

  // Pipe itemIdentifier
  private static boolean canonical_4_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "canonical_4_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && itemIdentifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ruleStart path cardinality KwFlag*
  public static boolean cardRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardRule")) return false;
    if (!nextTokenIs(b, "<card rule>", STAR, WHITESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CARD_RULE, "<card rule>");
    r = ruleStart(b, l + 1);
    r = r && path(b, l + 1);
    r = r && cardinality(b, l + 1);
    r = r && cardRule_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KwFlag*
  private static boolean cardRule_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardRule_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, KWFLAG)) break;
      if (!empty_element_parsed_guard_(b, "cardRule_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // integer? DoubleDot (integer | Star)?
  public static boolean cardinality(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardinality")) return false;
    if (!nextTokenIs(b, "<cardinality>", DIGIT, DOUBLEDOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CARDINALITY, "<cardinality>");
    r = cardinality_0(b, l + 1);
    r = r && consumeToken(b, DOUBLEDOT);
    r = r && cardinality_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // integer?
  private static boolean cardinality_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardinality_0")) return false;
    integer(b, l + 1);
    return true;
  }

  // (integer | Star)?
  private static boolean cardinality_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardinality_2")) return false;
    cardinality_2_0(b, l + 1);
    return true;
  }

  // integer | Star
  private static boolean cardinality_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardinality_2_0")) return false;
    boolean r;
    r = integer(b, l + 1);
    if (!r) r = consumeToken(b, STAR);
    return r;
  }

  /* ********************************************************** */
  // ruleStart path? Caret path Equal value
  public static boolean caretValueRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caretValueRule")) return false;
    if (!nextTokenIs(b, "<caret value rule>", STAR, WHITESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CARET_VALUE_RULE, "<caret value rule>");
    r = ruleStart(b, l + 1);
    r = r && caretValueRule_1(b, l + 1);
    r = r && consumeToken(b, CARET);
    r = r && path(b, l + 1);
    r = r && consumeToken(b, EQUAL);
    r = r && value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // path?
  private static boolean caretValueRule_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caretValueRule_1")) return false;
    path(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // (Identifier | Url | Urn)? Hash codeValue_ String?
  public static boolean code(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CODE, "<code>");
    r = code_0(b, l + 1);
    r = r && consumeToken(b, HASH);
    r = r && codeValue_(b, l + 1);
    r = r && code_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (Identifier | Url | Urn)?
  private static boolean code_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code_0")) return false;
    code_0_0(b, l + 1);
    return true;
  }

  // Identifier | Url | Urn
  private static boolean code_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code_0_0")) return false;
    boolean r;
    r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, URL);
    if (!r) r = consumeToken(b, URN);
    return r;
  }

  // String?
  private static boolean code_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code_3")) return false;
    consumeToken(b, STRING);
    return true;
  }

  /* ********************************************************** */
  // ruleStart code* Caret path Equal value
  public static boolean codeCaretValueRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeCaretValueRule")) return false;
    if (!nextTokenIs(b, "<code caret value rule>", STAR, WHITESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CODE_CARET_VALUE_RULE, "<code caret value rule>");
    r = ruleStart(b, l + 1);
    r = r && codeCaretValueRule_1(b, l + 1);
    r = r && consumeToken(b, CARET);
    r = r && path(b, l + 1);
    r = r && consumeToken(b, EQUAL);
    r = r && value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // code*
  private static boolean codeCaretValueRule_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeCaretValueRule_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!code(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "codeCaretValueRule_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ruleStart code* KwInsert ruleSetReference
  public static boolean codeInsertRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeInsertRule")) return false;
    if (!nextTokenIs(b, "<code insert rule>", STAR, WHITESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CODE_INSERT_RULE, "<code insert rule>");
    r = ruleStart(b, l + 1);
    r = r && codeInsertRule_1(b, l + 1);
    r = r && consumeToken(b, KWINSERT);
    r = r && ruleSetReference(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // code*
  private static boolean codeInsertRule_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeInsertRule_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!code(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "codeInsertRule_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KwCodeSystem Colon Identifier csMetadata_* csRule*
  public static boolean codeSystem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeSystem")) return false;
    if (!nextTokenIs(b, KWCODESYSTEM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KWCODESYSTEM, COLON, IDENTIFIER);
    r = r && codeSystem_3(b, l + 1);
    r = r && codeSystem_4(b, l + 1);
    exit_section_(b, m, CODE_SYSTEM, r);
    return r;
  }
